<resources>
    <string name="app_name">Treble</string>
    <string name="title_activity_settings">Treble</string>
    <string name="title_activity_top_level">Treble</string>
    <string name="desc_activity_top_level">Device specific settings</string>
    <string name="continue_question">Continue?</string>
    <string name="title_activity_updater">treble</string>
    <string name="update_not_found_title">YOUR SYSTEM IS UP TO DATE</string>
    <string name="update_found_title">SYSTEM UPDATE AVAILABLE</string>
    <string name="checking_update_title">Checking for available update</string>
    <string name="update_found_button">Download and install</string>
    <string name="update_not_found_button">Check for update</string>
    <string name="error_dialog_title">Error</string>
    <string name="dynamic_device_message">Your device does not support OTA updates!</string>
    <string name="update_error_message">An error has occurred during download!\nPlease, try again later.</string>
    <string name="success_install_message">New update installed successfully.\nPlease, reboot now.</string>
    <string name="failed_download_message">New update failed to be downloaded.\nCheck your logs for more information.</string>
    <string name="failed_install_message">New update failed to be installed.\nCheck your logs for more information.</string>
    <string name="preparing_update_title">Preparing system update</string>
    <string name="downloading_update_title">Downloading system update</string>
    <string name="applying_update_title">Applying system update</string>
    <string name="applied_update_title">Update applied successfully</string>
    <string name="manual_ota_button">Apply Manual OTA</string>
    <string name="clear_ota_button">Clear OTA Files</string>
    <string name="refresh_urls_button">Refresh URLs</string>
    <string name="prevent_exit_message">The update is still ongoing. Leaving the app now will stop it.\nDo you really want to exit now?</string>
    <string name="warning_dialog_title">Warning</string>
    <string name="magisk_exists_message">Magisk was detected! If you proceed with the update you may lose Magisk or the installation may fail!</string>
    <string name="menu_delete_ota">Delete OTA files</string>
    <string name="delete_ota_message">Take in consideration that you may lose your userdata if you proceed!\nTo prevent this, cancel this dialog, reboot and flash the latest update on fastboot mode.\n\nDo you want to proceed anyway?</string>
    <string name="toast_download_start">Downloading OTA package</string>
    <string name="toast_download_finished">OTA package downloaded</string>
    <string name="toast_download_fail">Failed downloading OTA package</string>
    <string name="changelog_default">Changelog will appear here</string>
    <string name="toast_install_done">OTA image successfully installed</string>
    <string name="toast_install_fail">Failed installing OTA image</string>
    <string name="toast_delete_cache">Packages cache deleted</string>
    <string name="toast_reboot">Reboot your device to apply changes</string>
    <string name="update_props">Updating Props</string>
    <string name="update_available_message">Update available: %1$s\nGSI: %2$s\nVariant: %3$s</string>
    <string name="no_update_available_message">No update available for variant: %1$s</string>
    <string name="props_summary">Will bash from an URL, continue?</string>
    <string name="restart_system_ui">Restarting System UI</string>
    <string name="title_group">GROUP</string>
    <string name="title_device_specific">DEVICE SPECIFIC</string>
    <string name="title_display">DISPLAY</string>
    <string name="title_audio">AUDIO</string>
    <string name="title_telephony">TELEPHONY</string>
    <string name="title_camera">CAMERA</string>
    <string name="title_misc">MISCELLANEOUS</string>
    <string name="title_debugging">DEBUGGING</string>
    <string name="title_gsi_group">GSI Support Group</string>
    <string name="summary_gsi_group">Join</string>
    <string name="title_asus">Asus settings</string>
    <string name="title_mydevice">My device</string>
    <string name="title_mediatek">Mediatek settings</string>
    <string name="title_qualcomm">Qualcomm settings</string>
    <string name="title_oneplus">OnePlus settings</string>
    <string name="title_nubia">Nubia settings</string>
    <string name="title_vsmart">Vsmart settings</string>
    <string name="title_huawei">Huawei settings</string>
    <string name="title_samsung">Samsung settings</string>
    <string name="title_transsion">Transsion settings</string>
    <string name="title_lenovo">Lenovo settings</string>
    <string name="title_xiaomi">Xiaomi settings</string>
    <string name="title_oppo">Oppo settings</string>
    <string name="title_doze">Doze settings</string>
    <string name="title_display_settings">Display settings</string>
    <string name="summary_display_settings">Backlight, refresh rate and more</string>
    <string name="title_ui_settings">User interface</string>
    <string name="summary_ui_settings">Layouts, paddings, icons and others</string>
    <string name="title_audio_settings">Audio settings</string>
    <string name="summary_audio_settings">Bluetooth and general fixes</string>
    <string name="title_audiofx">Audio effects</string>
    <string name="summary_audiofx">Audio modifications pre-included by your vendor</string>
    <string name="title_telephony_settings">Telephony settings</string>
    <string name="summary_telephony">Telephony, signal, ril and 5G options</string>
    <string name="title_ims_settings">IMS settings</string>
    <string name="summary_ims">VoLTE is here</string>
    <string name="title_camera_settings">Camera settings</string>
    <string name="summary_camera">Useful camera things</string>
    <string name="title_misc_settings">Misc settings</string>
    <string name="summary_misc">Fingerprint fix and other stuff</string>
    <string name="title_debug_settings">Debug settings</string>
    <string name="summary_debug">Debug sensors</string>
    <string name="title_prefaudio">General</string>
    <string name="alt_audio_police">use alternative audio policy</string>
    <string name="alt_headset_detect_title">Use alternative way to detect headsets</string>
    <string name="disable_audio_effects_title">Disable audio effects</string>
    <string name="disable_fast_audio">disable fast audio</string>
    <string name="disable_voicecall_route">Disable &quot;Voice Call In&quot; route</string>
    <string name="disable_headset_detect_sumarry">Standard fix for wired headphones recognition</string>
    <string name="disable_audio_effects_sumarry">Disable all of thems on vendor side</string>
    <string name="disable_fast_audio_sumarry">Should fix cracked/broken/stutter audio on devices which cant handle it</string>
    <string name="voicecall_route_sumarry">May fix echo or non-working audio on calls\nRequires a reboot</string>
    <string name="wide_bt_hal">Use System Wide BT HAL</string>
    <string name="max_connect_bt_audio">Set maximum connected bluetooth audio devices</string>
    <string name="esco_size_bt">Set eSCO transport unit size</string>
    <string name="bt_workgrounds_title">\nBLUETOOTH WORKAROUNDS</string>
    <string name="disable_le_apcf">Disable LE APCF Extended feature</string>
    <string name="le_acpf_sumarry">Fix crashing on some legacy devices</string>
    <string name="cap_le_vendorversion">Cap LE vendor version</string>
    <string name="predefined_workground_bluetooth">Predefined workarounds</string>
    <string name="set_bluetooth_commands_unssuported_title">Set unsupported Bluetooth commands</string>
    <string name="unssuported_bluetooth_of_features">Set unsupported Bluetooth og features</string>
    <string name="unssuported_le_features_bluetooth">Set unsupported Bluetooth LE features</string>
    <string name="unssuported_bluetooth_stats">Set unsupported Bluetooth states</string>
    <string name="two_plane_layout">Two-Pane Layout</string>
    <string name="two_plane_layout_summary">Enable tablet Layout. Requires restart apps</string>
    <string name="disable_navigation_bar">Force navigation bar disabled</string>
    <string name="disable_navigation_bar_summary">Requires a reboot</string>
    <string name="pointer_type">Pointer type</string>
    <string name="lckscreen">LOCK SCREEN</string>
    <string name="fod_icon_color">FOD Icon Color</string>
    <string name="stats_bar">STATUS BAR</string>
    <string name="bar_top_padding">Set status bar top padding</string>
    <string name="bar_start_padding">Set status bar start padding</string>
    <string name="bar_end_padding">Set status bar end padding</string>
    <string name="styles_title">STYLES</string>
    <string name="accent_color">Accent color</string>
    <string name="icon_shape">Icon shape</string>
    <string name="icon_pack">Icon pack</string>
    <string name="font_family">Font family</string>
    <string name="tools_title">TOOLS</string>
    <string name="restart_sysui_tools_option">Restart SystemUI</string>
    <string name="title_display_asus">DISPLAY</string>
    <string name="title_glove_mode">Enable glove mode</string>
    <string name="title_dt2w">Enable double tap to wake</string>
    <string name="title_misc_asus">MISCELLANEOUS</string>
    <string name="title_fp_wake">Enable fingerprint wake</string>
    <string name="title_usb_port_picker">USB port picker</string>
    <string name="summary_usb_port_picker">Requires a reboot</string>
    <string name="title_general_mediatek">GENERAL</string>
    <string name="title_telephony_mediatek">TELEPHONY</string>
    <string name="title_touch_hint_rotate">Rotation perf hint instead of touch</string>
    <string name="summary_touch_hint_rotate">For Mediatek devices</string>
    <string name="title_ged_kpi">Mediatek GED KPI support</string>
    <string name="summary_ged_kpi">Might improve GPU performance for Mediatek devices</string>
    <string name="cameratitle">GENERAL</string>
    <string name="forcefreshrate_display">Force Refresh rate</string>
    <string name="dynamicfrashrate_display">Dynamic Refresh rate</string>
    <string name="dynamicfrashrate_summary">Adjust refresh rate based on screen content\nRequires reboot</string>
    <string name="sfgl">Disable SF GL backpressure</string>
    <string name="sfgl_summary">Might improve rendering performance\nRequires reboot</string>
    <string name="sfhwc_disable">Disable SF HWC backpressure</string>
    <string name="sfhwc_disablesummary">Might improve rendering performance</string>
    <string name="hw_overlay">Disable HW overlays</string>
    <string name="hw_overlaysummary">Eats more CPU and battery</string>
    <string name="forceallowaod">Force allow Always-On Display</string>
    <string name="renderengine">Render engine backend</string>
    <string name="backlight_displaytitle">\nBACKLIGHT</string>
    <string name="linearbrightness">Set alternative brightness curve</string>
    <string name="alt_backlight">Force alternative backlight scale</string>
    <string name="summary_altbacklight">Requires turn off/on screen</string>
    <string name="backlightdisable">Disable backlight of hardware buttons</string>
    <string name="backlight_lowest">Allows setting brightness to the lowest possible</string>
    <string name="sf_latch_unsignaled_title">Latch Unsigned Buffers</string>
    <string name="sf_latch_unsignaled_summary">Forces latch of all buffers in SurfaceFlinger when enabled.</string>
    <string name="sf_auto_latch_unsignaled_title">Auto Latch Unsigned</string>
    <string name="sf_auto_latch_unsignaled_summary">Automatically latch single-layer buffers in SurfaceFlinger when enabled.</string>
    <string name="sf_disable_backpressure_title">Disable Backpressure</string>
    <string name="sf_disable_backpressure_summary">Disables SurfaceFlinger backpressure propagation to improve responsiveness.</string>
</resources>