<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="@drawable/bg_preference_item"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="6dp"
    tools:context=".UpdaterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="?attr/colorOnSurface"
        android:popupTheme="@style/ThemeOverlay.AppCompat" />

    <TextView
        android:id="@+id/txt_update_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.CustomTitle"
        android:textColor="?attr/colorOnSurface"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/checking_update_title"
        android:textSize="16sp"
        android:maxLines="2"
        android:gravity="center" />

    <ScrollView
        android:id="@+id/scroll_changelog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:minHeight="400dp"
        android:fillViewport="true"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_preference_item">

        <TextView
            android:id="@+id/txt_update_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.CustomSummary"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="14sp"
            android:text="@string/changelog_default"
            android:padding="8dp"
            style="@style/TextAppearance.AppCompat.Body1" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/progress_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_preference_item"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_horizontal"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/progress_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.CustomSummary"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="12sp"
            android:text="0%"
            android:textAlignment="center"
            style="@style/TextAppearance.AppCompat.Subhead" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="2dp"
        android:divider="@null"
        android:dividerHeight="0dp" />

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="@drawable/bg_preference_item">

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="end"
            android:text="@string/update_not_found_button" />

        <Button
            android:id="@+id/btn_manual_ota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="end"
            android:text="@string/manual_ota_button" />

        <Button
            android:id="@+id/btn_clear_ota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="end"
            android:text="@string/clear_ota_button" />

        <Button
            android:id="@+id/btn_refresh_urls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="end"
            android:text="@string/refresh_urls_button" />
    </LinearLayout>
</LinearLayout>
